--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -616,6 +616,7 @@ progress {
 .img-prom{
   max-width: 100%;
   height: auto;
+  padding-bottom: 30px;
 }
 
 .img-fluid-port{
@@ -3144,19 +3145,19 @@ textarea.form-control-lg {
 
 .btn-success {
   color: #fff;
-  background-color: #d80d20;
-  border-color: #d80d20;
+  background-color: #d80d20 !important;
+  border-color: #d80d20 !important;
 }
 .btn-success:hover {
   color: #fff;
-  background-color: #fc4d4d;
-  border-color: #fc4d4d;
+  background-color: #fc4d4d !important;
+  border-color: #fc4d4d !important;
 }
 .btn-check:focus + .btn-success, .btn-success:focus {
   color: #fff;
-  background-color: #fc4d4d;
-  border-color: #fc4d4d;
-  box-shadow: 0 0 0 0.25rem rgb(231, 96, 96);
+  background-color: #fc4d4d !important;
+  border-color: #fc4d4d !important;  
+  box-shadow: 0 0 0 0.25rem rgb(231, 96, 96) !important;
 }
 .btn-check:checked + .btn-success, .btn-check:active + .btn-success, .btn-success:active, .btn-success.active, .show > .btn-success.dropdown-toggle {
   color: #fff;
@@ -4623,6 +4624,9 @@ textarea.form-control-lg {
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  word-break: break-word;
+  overflow-x: auto;
+
 }
 .card-header:first-child {
   border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
@@ -4808,6 +4812,7 @@ textarea.form-control-lg {
 
 .accordion-body {
   padding: 1rem 1.25rem;
+  overflow-x: auto;
 }
 
 .accordion-flush .accordion-collapse {
@@ -11824,11 +11829,14 @@ ul{
 }
 
 .slider .slide{
-  width: 200px;
+  width: 300px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .slider .slide img{
   width: 100%;
+  height: 200px;
 }
 
 @keyframes scroll {
@@ -12065,11 +12073,61 @@ ul{
 
 .text-confi{
   text-align: center;
-  padding: 50px;
+  padding: 20px;
   padding-top: 15px;
 }
 .text-confi2{
   text-align: center;
   padding: 150px;
   padding-top: 15px;
+}
+
+.text-certifi{
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.prod-acc{
+  padding-left: 100px;
+}
+
+.copyright{
+  display: inline-block;
+  height: 50px;
+  padding-top: 20px;
+}
+
+@media (max-width: 768px){
+  .accordion-body{
+    font-size: 14px;
+  }
+}
+
+.media-right-margin{
+  margin-right: 25px;
+}
+
+.single-feature{
+  margin-bottom: 40px;
+  margin-top: 20px;
+}
+
+.icon-border{
+  
+}
+.icon-border span{
+  display: block;
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+  color: rgb(255, 0, 0);
+  font-size: 18px;
+  line-height: 50px;
+  border: 1px solid rgb(255, 0, 0);
+}
+
+.img-carro3d{
+  max-height: 100%;
+  width: auto;
 }
