--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -623,7 +623,6 @@ progress {
   
   width: 100%;
   height: 100%;
-  
   object-fit: cover;
   border-radius: 15px;;
   
@@ -11884,6 +11883,15 @@ ul{
 	margin:50px 0px 0px;
 }
 
+.banner-text-2{
+  padding: 80px;
+  padding-top: 50px;
+	margin:50px 0px 0px;
+}
+
+.titulo-conv{
+  padding-left: 160px;
+}
 .video-section {
 	background:url(../assets/img/autogas/video-bg.png) no-repeat fixed center;
   background-image:url(../assets/img/autogas/video-bg.png);
